MDEV-30552  InnoDB recovery crashes when error handling scenario

- InnoDB fails to reset the after_apply variable before applying
the redo log in last batch during multi-batch recovery.